Unsemantic CSS Framework

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -2,11 +2,9 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="columns">
-            <div class="column">
-                <p>{{ 'error.not_found'|trans }}</p>
-            </div>
+    <div class="grid-row">
+        <div class="grid-100">
+            <p>{{ 'error.not_found'|trans }}</p>
         </div>
     </div>
 
