--- a/app/Resources/views/admin/groups/tab_details.html.twig
+++ b/app/Resources/views/admin/groups/tab_details.html.twig
@@ -1,15 +1,15 @@
 {% import "macro.html.twig" as macro %}
 
-<div class="columns">
-    <div class="column full-width">
+<div class="grid-row">
+    <div class="grid-100">
         <button type="button" id="btn-back">{{ 'button.back'|trans }}</button>
         <button type="button" id="btn-edit">{{ 'button.edit'|trans }}</button>
         <button type="button" id="btn-delete">{{ 'button.delete'|trans }}</button>
     </div>
 </div>
 
-<div class="columns">
-    <div class="column full-width">
+<div class="grid-row">
+    <div class="grid-100">
         <fieldset>
             {{ macro.row('group.name'|trans, group.name) }}
             {% if group.global %}
