--- a/app/Resources/views/admin/projects/tab_details.html.twig
+++ b/app/Resources/views/admin/projects/tab_details.html.twig
@@ -1,7 +1,7 @@
 {% import "macro.html.twig" as macro %}
 
-<div class="columns">
-    <div class="column full-width">
+<div class="grid-row">
+    <div class="grid-100">
         <button type="button" id="btn-back">{{ 'button.back'|trans }}</button>
         <button type="button" id="btn-edit">{{ 'button.edit'|trans }}</button>
         {% if can.delete %}
@@ -10,8 +10,8 @@
     </div>
 </div>
 
-<div class="columns">
-    <div class="column full-width">
+<div class="grid-row">
+    <div class="grid-100">
         <fieldset>
             {{ macro.row('project.name'|trans, project.name) }}
             {{ macro.row('project.start_time'|trans, project.createdAt|date('Y-m-d')) }}
