--- a/app/Resources/views/macro.html.twig
+++ b/app/Resources/views/macro.html.twig
@@ -1,6 +1,6 @@
 {% macro row(label, value) %}
-    <div class="columns">
-        <div class="column one-fourth"><p class="caption">{{ label }}:</p></div>
-        <div class="column three-fourths"><p>{{ value }}</p></div>
+    <div class="grid-container grid-parent grid-row">
+        <div class="grid-25"><p class="caption">{{ label }}:</p></div>
+        <div class="grid-75"><p>{{ value }}</p></div>
     </div>
 {% endmacro %}
