--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -2,12 +2,10 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="columns">
-            <div class="column">
-                <p><strong>{{ status_code }} {{ status_text }}</strong></p>
-                <p>{{ exception.message }} {{ exception.code ? '(%s)'|format(exception.code) }}</p>
-            </div>
+    <div class="grid-row">
+        <div class="grid-100">
+            <p><strong>{{ status_code }} {{ status_text }}</strong></p>
+            <p>{{ exception.message }} {{ exception.code ? '(%s)'|format(exception.code) }}</p>
         </div>
     </div>
 
