--- a/app/Resources/views/admin/groups/view.html.twig
+++ b/app/Resources/views/admin/groups/view.html.twig
@@ -2,15 +2,13 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="columns">
-            <div class="column full-width">
-                <div class="tabs" id="tabs-group" data-tab="{{ tab }}">
-                    <ul>
-                        <li><a href="{{ path('admin_tab_group_details', {'id': group.id}) }}">{{ group.name }}</a></li>
-                        <li><a href="{{ path('admin_tab_group_members', {'id': group.id}) }}">{{ 'membership'|trans }}</a></li>
-                    </ul>
-                </div>
+    <div class="grid-row">
+        <div class="grid-100">
+            <div class="tabs" id="tabs-group" data-tab="{{ tab }}">
+                <ul>
+                    <li><a href="{{ path('admin_tab_group_details', {'id': group.id}) }}">{{ group.name }}</a></li>
+                    <li><a href="{{ path('admin_tab_group_members', {'id': group.id}) }}">{{ 'membership'|trans }}</a></li>
+                </ul>
             </div>
         </div>
     </div>
