--- a/app/Resources/views/admin/projects/view.html.twig
+++ b/app/Resources/views/admin/projects/view.html.twig
@@ -2,14 +2,12 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="columns">
-            <div class="column full-width">
-                <div class="tabs" id="tabs-project" data-tab="{{ tab }}">
-                    <ul>
-                        <li><a href="{{ path('admin_tab_project_details', {'id': project.id}) }}">{{ project.name }}</a></li>
-                    </ul>
-                </div>
+    <div class="grid-row">
+        <div class="grid-100">
+            <div class="tabs" id="tabs-project" data-tab="{{ tab }}">
+                <ul>
+                    <li><a href="{{ path('admin_tab_project_details', {'id': project.id}) }}">{{ project.name }}</a></li>
+                </ul>
             </div>
         </div>
     </div>
